--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,4 @@ build-pult/Makefile.Release
 build-pult/ui_controlpanel.h
 build-pult/debug/moc_communication.cpp
 build-pult/debug/moc_rovcontrol.cpp
+build-pult/debug/moc_communication.cpp
