--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/Makefile
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/Makefile.Debug
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/Makefile.Release
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/ui_controlpanel.h
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmp1haehr
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpbrb4lk
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpby7ofc
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpisadaq
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpqvmrhz
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmprebd4g
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpso46dm
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpxyz9mf
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpzwdtye
