--- a/.gitignore
+++ b/.gitignore
@@ -46,3 +46,14 @@ build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmp
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpso46dm
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpxyz9mf
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpzwdtye
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/debug/qrc_Img.cpp
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/object_script.pult.Debug
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/object_script.pult.Release
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpdedgat
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmphncpin
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpjdemlf
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpshvb4o
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpuuupiu
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpygfz1m
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpyjwsbe
+build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpzdik82
