--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,42 @@ build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmp
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpygfz1m
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpyjwsbe
 build-pult-Desktop_Qt_5_12_3_MinGW_32_bit-Debug/usershydron~1appdatalocaltemptmpzdik82
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/dial.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/moc_communication.cpp
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/moc_controlpanel.cpp
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/moc_predefs.h
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/moc_rovcontrol.cpp
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/moc_rovorient.cpp
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/pult.exe
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/qrc_Img.cpp
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/debug/rov.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/dial.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/images/arrow.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/images/dial.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/images/rov.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile.Debug
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/Makefile.Release
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/object_script.pult.Debug
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/object_script.pult.Release
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/rov.png
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/ui_controlpanel.h
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmp1fzhar
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmp2nv3ix
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmp4o1sjn
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpb9sfv6
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpbyjpxq
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpjhqdyn
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpjthjpi
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmplm_f_o
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpneroyf
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpo0jsz4
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpqsqyuc
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpsju6wi
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpwu7rqr
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpx0vsdh
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpxp_jhf
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpyvytbk
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpzfkz3m
+build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpzpeukw
+pult/pult.pro.user.c560a79
