--- a/.gitignore
+++ b/.gitignore
@@ -96,3 +96,5 @@ build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpyvy
 build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpzfkz3m
 build-pult-Desktop_Qt_5_15_2_MinGW_64_bit-Debug/usersadminappdatalocaltemptmpzpeukw
 pult/pult.pro.user.c560a79
+pult/pult.pro.user
+pult/pult.pro.user
